...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="FJc-7X-j0C">
                                <rect key="frame" x="20" y="88" width="394" height="150"/>
                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="150" id="C5d-9Y-QkE"/>
                                </constraints>
                                <string key="text">FOOD 
FOR 
PLATES</string>
                                <fontDescription key="fontDescription" name="JosefinSans-Regular" family="Josefin Sans" pointSize="70"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
...
                                </connections>
                            </mapView>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Nn1-nl-ZQp">
                                <rect key="frame" x="0.0" y="88" width="414" height="32"/>
                                <color key="backgroundColor" red="0.93332451579999998" green="0.9333273768" blue="0.93333357569999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <segments>
                                    <segment title="ALL"/>
                                    <segment title="FOOD"/>
                                    <segment title="DRINKS"/>
                                    <segment title="COFFEE"/>
                                    <segment title="SHOPPING"/>
                                    <segment title="MARKETS"/>
                                </segments>
                                <color key="selectedSegmentTintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <action selector="categorySelection:" destination="jOo-sd-yq5" eventType="valueChanged" id="Fi9-5f-xhJ"/>
                                </connections>
                            </segmentedControl>
...
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="dOZ-oD-uml"/>
                    </view>
                    <navigationItem key="navigationItem" id="9Ll-HN-Njn">
                        <barButtonItem key="backBarButtonItem" title="-" id="NO0-IT-Cal"/>
                        <rightBarButtonItems>
                            <barButtonItem title="Item" image="location.fill" catalog="system" id="Fgx-Gf-9Ci">
                                <connections>
                                    <action selector="areaButtonTapped:" destination="jOo-sd-yq5" id="VpS-AP-658"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Item" image="location.circle" catalog="system" id="2cT-Sr-JJ2">
                                <connections>
...
            <point key="canvasLocation" x="3146" y="258"/>
        </scene>
        <!--Browse-->
        <scene sceneID="Vrz-9d-ODT">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ngf-pJ-MOT" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Browse" image="eye.fill" catalog="system" selectedImage="eye" id="fpb-ne-kTk"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="si5-lA-PhH">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="barTintColor" cocoaTouchSystemColor="lightTextColor"/>
...
                            </barButtonItem>
                            <barButtonItem title="Item" image="heart.circle" catalog="system" id="3uY-vt-jc9">
                                <connections>
                                    <action selector="showFavourites:" destination="fBw-xg-fI1" id="Nqg-nD-1Z3"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem image="arrow.clockwise" catalog="system" id="O3c-Se-lXt">
                                <connections>
                                    <action selector="resetToAllVenues:" destination="fBw-xg-fI1" id="LVo-un-B9g"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
                    </navigationItem>
...
